# ircppbot-ChannelBot

./: .gitignore  README  TODO  bind.sql  channel.sql  configure.ac  example.conf  makefile
man/: Makefile.am
src/: Auth.cpp  Channel.cpp  ChannelBot.cpp  Makefile.am  cauth.cpp  cchannel.cpp  channelbot.cpp
src/include/: Auth.h  Channel.h  ChannelBot.h  cauth.h  cchannel.h  channelbot.h
